# CMakeList.txt : CMake project for cau 2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cau 2")

# Add source to this project's executable.
add_executable (CMakeTarget "cau 2.cpp" "cau 2.h")

# TODO: Add tests and install targets if needed.
